💄 fixed improper spacing of section headings

--- a/files/css/_base.scss
+++ b/files/css/_base.scss
@@ -515,6 +515,10 @@ search {
         & .titles{
             align-items: baseline;
             text-align: left;
+
+            & > * {
+                margin: 0;
+            }
         }
         & .right-side{
             align-self: flex-start;
